--- a/HTML/PrimeirasTags.html
+++ b/HTML/PrimeirasTags.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8"> <!--conjunto de caracteres-->
 </head>
 <body>
-<p>bye</p>
+<p>bye &nbsp; &nbsp; bye </p> <!--&nbsp; adiciona espaco-->
 
 <footer>
 
