Aplicar SCRIPT javascript externo

--- a/HTML/ HeadDoDocumento.html
+++ b/HTML/ HeadDoDocumento.html
@@ -13,9 +13,16 @@
 
     </style>
 
+    <script>
+        function escreverNome() {
+            meuNome.innerHTML = "Anderson Macedo Cavalcanti"
+        }
+        window.onload = escreverNome;
+    </script>
+
 </head>
 <body>
-    <p>Bem vindo a essa page</p>
+    <p id="meuNome"></p>
 
 <footer>
 </footer>
