--- a/HTML/Unidade05-Textododocumento.html
+++ b/HTML/Unidade05-Textododocumento.html
@@ -6,22 +6,13 @@
 </head>
 <body>
 
-<hgroup> <!--Serve para organizar e agrupar os textos de cabecarios (heading)-->
-    <h1>Lewandowski manda governo definir...</h1>
-    <h2>Lewandowski manda governo definir...</h2>
-    <h3>Lewandowski manda governo definir...</h3>
-    <h4>Lewandowski manda governo definir...</h4>
-    <h5>Lewandowski manda governo definir...</h5>
-    <h6>Lewandowski manda governo definir...</h6>
-</hgroup>
 
-    <p>O Ministério da Saúde alertou nesta segunda-feira (8)
-        que as "primeiras etapas" da campanha nacional de vacinação
-        contra a Covid-19 não têm previsão de atender 100% dos profissionais de saúde.</p>
+    <p>
+        Anderson <br> <!--Adiciona quebra de linha-->
+        Macedo   <br> <!--Adiciona quebra de linha-->
+        Cavalcanti
+    </p>
 
-    <p>Segundo o alerta do governo enviado para estados e municípios,
-        um dos focos específicos d a "primeira fase" da vacinação é atender 34% dos
-        trabalhadores da saúde, apenas aqueles que atuam diretamente na linha de frente contra a pandemia.</p>
 <footer>
 
 </footer>
