--- a/HTML/Unidade05-Textododocumento.html
+++ b/HTML/Unidade05-Textododocumento.html
@@ -3,15 +3,19 @@
 <head>
     <title>Unidade 05 Texto do documento</title>
     <meta charset="UTF-8">
+    <style>
+        body{font-size: 30px}
+    </style>
 </head>
 <body>
 
 
-    <p>
-        Anderson <br> <!--Adiciona quebra de linha-->
-        Macedo   <br> <!--Adiciona quebra de linha-->
-        Cavalcanti
-    </p>
+    <p >Texto em <b>destaque</b></p>
+    <p>Texto em <i>italico</i></p>
+    <p>Texto em <u>sublinhado</u></p>
+    <p>Texto em <sub>subscrito</sub></p>
+    <p>Texto em <sup>superescrito</sup></p>
+    <p>Texto <s>riscado</s></p>
 
 <footer>
 
