Trabalhando com lista

--- a/HTML/Unidade05-Textododocumento.html
+++ b/HTML/Unidade05-Textododocumento.html
@@ -9,13 +9,35 @@
 </head>
 <body>
 
+<!--Lista sem ordem-->
 
-    <p >Texto em <b>destaque</b></p>
-    <p>Texto em <i>italico</i></p>
-    <p>Texto em <u>sublinhado</u></p>
-    <p>Texto em <sub>subscrito</sub></p>
-    <p>Texto em <sup>superescrito</sup></p>
-    <p>Texto <s>riscado</s></p>
+<ul type="square"> <!--type para mudar a forma - quadrado, circulo etc-->
+    <li>Brazil</li>
+    <li>China</li>
+    <li>Estados unidos</li>
+    <li>Chile</li>
+    <li>Australia</li>
+</ul>
+
+<!--lista ordenada-->
+
+<ol type="I"> <!--type para mudar a forma - quadrado, circulo etc-->
+    <li>Alonso</li>
+    <li>Vettel</li>
+    <li>Massa</li>
+    <li>Button</li>
+</ol>
+
+<!--Lista descriptiva (nao muito comum)-->
+
+<dl>
+    <dt>Unidade 01</dt>
+    <dd>Apresentacao do curso html</dd>
+    <dt>Unidade 02</dt>
+    <dd>Uma breve historia do HTML</dd>
+</dl>
+
+
 
 <footer>
 
