Usar as tags "i" e "em"

--- a/HTML/Unidade05-Textododocumento.html
+++ b/HTML/Unidade05-Textododocumento.html
@@ -8,38 +8,17 @@
     </style>
 </head>
 <body>
+    <p>
+        Além deles, o governo também cita como prioridade inicial: "pessoas idosas residentes em instituições de
+        longa permanência (institucionalizadas)", "pessoas a partir de 18 anos de idade com deficiência,
+        residentes em Residências Inclusivas (institucionalizadas)"
+    </p>
 
-<!--Lista sem ordem-->
+    <p><i lang="fr">je ne sais quoi</i></p> <!--i para quando for um texto em outro idioma ou etc..-->
+    <p><em>"população indígena"</em> vivendo em terras indígenas.</p> <!--(em) e usado quando a palavra tiver
+    uma pronuncia diferente / -->
 
-<ul type="square"> <!--type para mudar a forma - quadrado, circulo etc-->
-    <li>Brazil</li>
-    <li>China</li>
-    <li>Estados unidos</li>
-    <li>Chile</li>
-    <li>Australia</li>
-</ul>
-
-<!--lista ordenada-->
-
-<ol type="I"> <!--type para mudar a forma - quadrado, circulo etc-->
-    <li>Alonso</li>
-    <li>Vettel</li>
-    <li>Massa</li>
-    <li>Button</li>
-</ol>
-
-<!--Lista descriptiva (nao muito comum)-->
-
-<dl>
-    <dt>Unidade 01</dt>
-    <dd>Apresentacao do curso html</dd>
-    <dt>Unidade 02</dt>
-    <dd>Uma breve historia do HTML</dd>
-</dl>
-
-
-
-<footer>
+    <footer>
 
 </footer>
 </body>
