Usar as tags b e strong

--- a/HTML/Unidade05-Textododocumento.html
+++ b/HTML/Unidade05-Textododocumento.html
@@ -8,16 +8,11 @@
     </style>
 </head>
 <body>
-    <p>
-        Além deles, o governo também cita como prioridade inicial: "pessoas idosas residentes em instituições de
-        longa permanência (institucionalizadas)", "pessoas a partir de 18 anos de idade com deficiência,
-        residentes em Residências Inclusivas (institucionalizadas)"
-    </p>
+    <!--strong e para indicar alta importancia e forca-->
+    <!--b e para indicar algo importante (mais usado)-->
 
-    <p><i lang="fr">je ne sais quoi</i></p> <!--i para quando for um texto em outro idioma ou etc..-->
-    <p><em>"população indígena"</em> vivendo em terras indígenas.</p> <!--(em) e usado quando a palavra tiver
-    uma pronuncia diferente / -->
-
+    <p><strong>Atencao</strong> Além deles, o governo também cita como prioridade inicial:
+        "pessoas idosas residentes em instituições de longa permanência <b>(institucionalizadas)</b>"</p>
     <footer>
 
 </footer>
