Alterando alinhamento da imagem

--- a/HTML/Unidade06-Comoadicionarimagens.html
+++ b/HTML/Unidade06-Comoadicionarimagens.html
@@ -3,17 +3,32 @@
 <head>
     <title>Unidade 6</title>
     <meta charset="UTF-8">
+    <style>
+        #imag{
+            float: left;
+            margin: 10px;
+            border: #ff0000 3px solid;
+        }
+        #pPrin{
+            font-size: 20px;
+        }
+
+    </style>
 </head>
 <body>
-    <hgroup>
     <h1>Receita Pato com laranja</h1>
     <h2>Modo de preparo</h2>
-    </hgroup>
 
-    <p>Descasque as batatas e cozinhe-as até ficarem “al dente”.
+    <img id="imag" src="imagens/Pato-LAranja_bx2.jpg" width="150" height="150" title="Foto pato com laranja" alt="Foto do pato com laranja">
+
+    <p id="pPrin">Descasque as batatas e cozinhe-as até ficarem “al dente”.
         Retire toda a polpa das laranjas e corte as cascas em tiras finas.
         Ferva as cascas em uma panela por cinco minutos e coe. Repita o processo
         três vezes para tirar o amargo da casca. Guarde a água da fervura e reserva as cascas.
+        aranjas e corte as cascas em tiras finas.
+        Ferva as cascas em uma panela por cinco minutos e coe. Repita o processo
+        três vezes para tirar o amargo da casca. Guarde a três vezes para tirar o amargo da casca. Guarde a
+
     </p>
 
     <!--title e o titulo qundo passa o mouse sobre a imagem -->
@@ -21,7 +36,6 @@
     <!--alt e para pessoas com deficiencia visual, ele permite a o navegador ler a descricao da imagem
      e com conecxao lentas mostra a descricao enquando a imagem nao carrega-->
 
-    <img src="imagens/Pato-LAranja_bx2.jpg" width="300" height="300" title="Foto pato com laranja" alt="Foto do pato com laranja">
 
 
     <h3>Ingredientes</h3>
