--- a/HTML/Unidade06-Comoadicionarimagens.html
+++ b/HTML/Unidade06-Comoadicionarimagens.html
@@ -4,14 +4,21 @@
     <title>Unidade 6</title>
     <meta charset="UTF-8">
     <style>
-        #imag{
+        .imag{
             float: left;
             margin: 10px;
             border: #ff0000 3px solid;
+            width: 200px;
+            height: 200px;
         }
         #pPrin{
             font-size: 20px;
         }
+
+        h3,ul{
+            clear: both; /*Retira os elementos em volta*/
+        }
+
 
     </style>
 </head>
@@ -19,7 +26,7 @@
     <h1>Receita Pato com laranja</h1>
     <h2>Modo de preparo</h2>
 
-    <img id="imag" src="imagens/Pato-LAranja_bx2.jpg" width="150" height="150" title="Foto pato com laranja" alt="Foto do pato com laranja">
+    <img class="imag" src="imagens/Pato-LAranja_bx2.jpg" title="Foto pato com laranja" alt="Foto do pato com laranja">
 
     <p id="pPrin">Descasque as batatas e cozinhe-as até ficarem “al dente”.
         Retire toda a polpa das laranjas e corte as cascas em tiras finas.
