Utilizar os elementos figure e figcaption

--- a/HTML/Unidade06-Comoadicionarimagens.html
+++ b/HTML/Unidade06-Comoadicionarimagens.html
@@ -4,12 +4,17 @@
     <title>Unidade 6</title>
     <meta charset="UTF-8">
     <style>
-        .imag{
+        figure {
             float: left;
             margin: 10px;
-            border: #ff0000 3px solid;
-            width: 200px;
-            height: 200px;
+            border: #484848 3px solid;
+
+        }
+        figcaption{
+            font-size: 11px;
+            font-family: sans-serif;
+            background: cornsilk;
+            padding: 3px; /*distancia interna*/
         }
         #pPrin{
             font-size: 20px;
@@ -26,7 +31,10 @@
     <h1>Receita Pato com laranja</h1>
     <h2>Modo de preparo</h2>
 
-    <img class="imag" src="imagens/Pato-LAranja_bx2.jpg" title="Foto pato com laranja" alt="Foto do pato com laranja">
+    <figure>
+    <img  src="imagens/Pato-LAranja_bx2.jpg" title="Foto pato com laranja" alt="Foto do pato com laranja" width="250" height="250">
+        <figcaption>Foto do prato pronto (Roberto Soares)</figcaption>
+    </figure>
 
     <p id="pPrin">Descasque as batatas e cozinhe-as até ficarem “al dente”.
         Retire toda a polpa das laranjas e corte as cascas em tiras finas.
