--- a/HTML/Unidade07-ComoAdicionarLinks.html
+++ b/HTML/Unidade07-ComoAdicionarLinks.html
@@ -27,6 +27,10 @@
             src="https://www.youtube.com/embed/nvaJBK4xUdc?autoplay=0&mute=0" >
     </iframe>
 
+    <!-- ../ permite subir um nivel para acessar uma pasta no diretorio-->
+    <h2>Acesse o exercicio anterior</h2>
+    <p><a href="Unidade06-Comoadicionarimagens.html">Clique aqui para acesar</a></p>
+
 <footer>
 
 </footer>
