Criação de sub-listas

--- a/HTML/Unidade08-ComoCriarListas.html
+++ b/HTML/Unidade08-ComoCriarListas.html
@@ -3,18 +3,16 @@
 <head>
     <title>Unidade 8</title>
     <meta charset="UTF-8">
-    <style>
-        li{
-            font-size: 30px;
-            margin: 5px;
-            list-style-image: url("imagens/star_77949.png");
-        }
-    </style>
 </head>
 <body>
 
     <ul>
         <li>Brasil</li>
+        <ol>
+            <li>Sao paulo</li>
+            <li>Recife</li>
+            <li>Rio de Janeiro</li>
+        </ol>
         <li>Angola</li>
         <li>Mexico</li>
         <li>Chile</li>
