Criação de menu vertical com listas

--- a/HTML/Unidade08-ComoCriarListas.html
+++ b/HTML/Unidade08-ComoCriarListas.html
@@ -3,19 +3,29 @@
 <head>
     <title>Unidade 8</title>
     <meta charset="UTF-8">
+
+    <style>
+        ul{margin: 0;padding: 0;width: 250px}
+        li{list-style: none}
+        li a{display: block;
+            text-decoration: none;
+            background-color: cornflowerblue;
+            margin-bottom: 2px;
+            padding: 3px;
+            color: white;
+        }
+        li a:hover{background-color:aqua}
+
+
+    </style>
 </head>
 <body>
 
     <ul>
-        <li>Brasil</li>
-        <ol>
-            <li>Sao paulo</li>
-            <li>Recife</li>
-            <li>Rio de Janeiro</li>
-        </ol>
-        <li>Angola</li>
-        <li>Mexico</li>
-        <li>Chile</li>
+        <li><a href="Unidade06-Comoadicionarimagens.html" >Brasil</a></li>
+        <li><a href="Unidade05-Textododocumento.html" >Angola</a></li>
+        <li><a href="Unidade07-ComoAdicionarLinks.html" >Mexico</a></li>
+        <li><a href="Unidade08-ComoCriarListas.html" >Chile</a></li>
     </ul>
 
     <footer>
