Criar um menu horizontal

--- a/HTML/Unidade08-ComoCriarListas.html
+++ b/HTML/Unidade08-ComoCriarListas.html
@@ -5,14 +5,15 @@
     <meta charset="UTF-8">
 
     <style>
-        ul{margin: 0;padding: 0;width: 250px}
-        li{list-style: none}
-        li a{display: block;
+        ul{margin: 0;padding: 0;}
+        li{list-style: none;display: inline-block}
+        li a{
             text-decoration: none;
             background-color: cornflowerblue;
             margin-bottom: 2px;
-            padding: 3px;
+            padding: 3px 15px; /* primeiro valor cima e baixo segundo valor direita e esquerda*/
             color: white;
+            margin-left: -2px;
         }
         li a:hover{background-color:aqua}
 
