Adicionar um campo datepicker

--- a/HTML/Unidade13-Formulários.html
+++ b/HTML/Unidade13-Formulários.html
@@ -60,7 +60,10 @@
         <label for="password">password</label>
         <input type="password" name="password" id="password" autocomplete="off">
         <label for="filhos">QT de filhos</label>
-        <input type="number" name="filhos" id="filhos" max="1111111111111111111" min="1">
+        <input type="number" name="filhos" id="filhos" max="10" min="1" size="50">
+        <label for="aniversario">Aniversario</label>
+        <input type="date" id="aniversario" name="aniversario" size="80">
+
         <input type="submit" value="Salvar" id="submit">
     </form>
     </section>
