Adicionar um datalist ao um input text

--- a/HTML/Unidade13-Formulários.html
+++ b/HTML/Unidade13-Formulários.html
@@ -64,6 +64,16 @@
         <label for="aniversario">Aniversario</label>
         <input type="date" id="aniversario" name="aniversario" size="80">
 
+        <label for="list">Ecolha um valor</label>
+        <input type="text" id="list" list="lista" name="list">
+        <datalist id="lista">
+            <option value="Centauro">Centauro</option>
+            <option value="Adidas">Adidas</option>
+            <option value="Lacost">Lacost</option>
+            <option value="Nokia">Nokia</option>
+            <option value="Samsung">Samsung</option>
+        </datalist>
+
         <input type="submit" value="Salvar" id="submit">
     </form>
     </section>
