--- a/HTML/Unidade13-Formulários.html
+++ b/HTML/Unidade13-Formulários.html
@@ -84,6 +84,9 @@
         <input type="range" id="pessoas" name="pessoas" max="15" min="1" onchange="mostrarResultado()">
         <span id="resultado"></span>
 
+        <label for="cor">Escolha uma cor</label>
+        <input type="color" id="cor" name="cor">
+        <br>
         <input type="submit" value="Salvar" id="submit">
     </form>
     </section>
