Adicionar um type search

--- a/HTML/Unidade13-Formulários.html
+++ b/HTML/Unidade13-Formulários.html
@@ -87,6 +87,10 @@
         <label for="cor">Escolha uma cor</label>
         <input type="color" id="cor" name="cor">
         <br>
+
+        <label for="search">Pesquisar</label>
+        <input type="search" id="search" name="search" size="20" autocomplete="off">
+
         <input type="submit" value="Salvar" id="submit">
     </form>
     </section>
