Propriedade de cascata

--- a/CSS/Unidade01-Fundamentos.html
+++ b/CSS/Unidade01-Fundamentos.html
@@ -4,6 +4,11 @@
     <title>Unidade 3</title>
     <meta charset="UTF-8">
     <link href="estilos/estilo01.css" rel="stylesheet">
+    <style>
+        h1{
+            color: cadetblue;
+        }
+    </style>
 </head>
 <body>
     <header>
