--- a/CSS/Unidade04-Fontes.html
+++ b/CSS/Unidade04-Fontes.html
@@ -4,8 +4,6 @@
     <meta charset="UTF-8">
     <title>Unidade 4</title>
     <link href="estilos/estilo04.css" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Hanalei&display=swap" rel="stylesheet">
 </head>
 <body>
 <main>
@@ -13,8 +11,10 @@
         <nav></nav>
     </header>
 
-    <p>Estilos de fontes do google fonts</p>
-
+    <h1>EUA: Acidente com mais de 100 veículos deixa ao menos 6 mortos</h1>
+    <p>Equipes de regaste e bombeiros atenderam outras 65 pessoas que ficaram feridas, sendo três em estado grave</p>
+    <p>Ao menos seis pessoas morreram e 65 ficaram feridas em um acidente de trânsito envolvendo 133 veículos na cidade de Forthworth, no Texas, nos Estados Unidos, nesta sexta-feira (12)</p>
+    <p><span id="preco">$299.99</span> $199.99</p> <!--Span para estilizar partes separadas ou outras funcoes-->
     <section></section>
     <article></article>
     <aside></aside>
