--- a/CSS/Unidade05-ConceitosBásicosDeCSS.html
+++ b/CSS/Unidade05-ConceitosBásicosDeCSS.html
@@ -22,6 +22,10 @@
       <p id="sombraTexto">Sombra</p>
     </div>
 
+    <div id="gradienteLinear">
+
+    </div>
+
     <section></section>
     <article></article>
     <aside></aside>
