--- a/CSS/Unidade06-PageLayouts-Fundamentos.html
+++ b/CSS/Unidade06-PageLayouts-Fundamentos.html
@@ -21,6 +21,12 @@
         </div>
     </div>
 
+    <div id="principal2">
+        <div id="janela1"></div>
+        <div id="janela2"></div>
+        <div id="janela3"></div>
+    </div>
+
 
 
     <section></section>
