Controlar conteúdo com barra de rolagem

--- a/CSS/Unidade07-Page Layouts-PosicionamentoDeElementos.html
+++ b/CSS/Unidade07-Page Layouts-PosicionamentoDeElementos.html
@@ -22,7 +22,18 @@
 
     <div id="principal">
         <section class="janela1">Verde
-            <section class="janela2">Amarelo</section>
+            <p>As equipes de resgate retiraram mais nove corpos do local de uma enchente repentina na região do Himalaia, no norte da Índia, neste domingo (14). Uma semana após o desastre, o número de mortos aumenta para 50, com mais de 150 desaparecidos, disseram as autoridades.
+                A inundação repentina no estado de Uttarakhand, desencadeada pelo que os cientistas disseram que poderia ter sido uma grande avalanche de gelo da geleira, enviou água, rochas e detritos descendo o vale do rio Dhauliganga, destruindo barragens e pontes.
+                As equipes de resgate estão usando máquinas pesadas de escavação, na corrida para libertar dezenas de trabalhadores da construção de barragens presos em um túnel subterrâneo, conectado a um projeto hidrelétrico que está sendo construído pela estatal National Thermal Power Corporation.
+                "Ainda não perdemos todas as esperanças. Esperamos encontrar mais sobreviventes", disse à Reuters o alto funcionário do governo na região, Swati Bhadoriya. As autoridades disseram que 154 pessoas ainda estão desaparecidas.
+                Leia mais
+                Pesquisador vê relação entre deslizamento no Himalaia e aquecimento global
+                Geleira do Himalaia se solta, causa enchente e deixa até 150 mortos na Índia
+                Com poluição reduzida durante quarentena, Himalaia volta a ser visível na Índia
+                Especialistas alertaram que ainda pode haver grandes quantidades de rochas, destroços, gelo e água que podem ser desalojados, tornando os esforços de resgate arriscados.
+                Uttarakhand está sujeito a inundações repentinas e deslizamentos de terra. O desastre gerou pedidos de grupos ambientais para uma revisão dos projetos de energia nas montanhas ecologicamente sensíveis.
+                Uma equipe de cientistas está investigando se um pedaço de uma geleira do Himalaia caiu na água e provocou a enchente.
+                Existem cerca de 10.000 geleiras no Himalaia indiano. Uttarakhand tem até 1.495 geleiras e muitas estão diminuindo devido ao aquecimento do clima.</p>
         </section>
     </div>
 
