--- a/CSS/Unidade09-PageLayouts-LayoutAdaptivo.html
+++ b/CSS/Unidade09-PageLayouts-LayoutAdaptivo.html
@@ -26,10 +26,43 @@
 
 
     <article id="esquerda">
+        <img id="terremoto" src="../HTML/imagens/terremoto-causou-estragos-e-deixou-feridos-e-desabrigados.webp" alt="img">
+        <p>
+            A primeira missão a Marte, enviada pelos Emirados Árabes Unidos, retornou sua primeira imagem do planeta vermelho neste domingo (14) A Emirates Mars Mission, conhecida como Hope Probe, chegou ao planeta vermelho na terça-feira (9) e entrou em órbita com sucesso em sua primeira tentativa.
+
+            "A transmissão da primeira imagem de Marte da Hope Probe é um momento decisivo em nossa história e marca a adesão dos Emirados Árabes Unidos às nações avançadas envolvidas na exploração espacial", disse o príncipe herdeiro de Abu Dhabi, Sheikh Mohamed bin Zayed Al Nahyan ao lado da imagem divulgada no Twitter neste domingo.
+        </p>
+        <p>
+            A primeira missão a Marte, enviada pelos Emirados Árabes Unidos, retornou sua primeira imagem do planeta vermelho neste domingo (14) A Emirates Mars Mission, conhecida como Hope Probe, chegou ao planeta vermelho na terça-feira (9) e entrou em órbita com sucesso em sua primeira tentativa.
+
+            "A transmissão da primeira imagem de Marte da Hope Probe é um momento decisivo em nossa história e marca a adesão dos Emirados Árabes Unidos às nações avançadas envolvidas na exploração espacial", disse o príncipe herdeiro de Abu Dhabi, Sheikh Mohamed bin Zayed Al Nahyan ao lado da imagem divulgada no Twitter neste domingo.
+        </p>
+
+        <p>
+            ua primeira imagem do planeta  Mission, conhecida como Hope Probe, chegou ao planeta vermelho na terça-feira (9) e entrou em órbita com sucesso em sua primeira tentativa.
+
+        </p>
 
     </article>
 
     <aside id="direita">
+
+        <img id="terremoto2" src="../HTML/imagens/terremoto-causou-estragos-e-deixou-feridos-e-desabrigados.webp" alt="img">
+        <p>
+            A primeira missão a Marte, enviada pelos Emirados Árabes Unidos, retornou sua primeira imagem do planeta vermelho neste domingo (14) A Emirates Mars Mission, conhecida como Hope Probe, chegou ao planeta vermelho na terça-feira (9) e entrou em órbita com sucesso em sua primeira tentativa.
+
+            "A transmissão da primeira imagem de Marte da Hope Probe é um momento decisivo em nossa história e marca a adesão dos Emirados Árabes Unidos às nações avançadas envolvidas na exploração espacial", disse o príncipe herdeiro de Abu Dhabi, Sheikh Mohamed bin Zayed Al Nahyan ao lado da imagem divulgada no Twitter neste domingo.
+        </p>
+        <p>
+            A primeira missão a Marte, enviada pelos Emirados Árabes Unidos, retornou sua primeira imagem do planeta vermelho neste domingo (14) A Emirates Mars Mission, conhecida como Hope Probe, chegou ao planeta vermelho na terça-feira (9) e entrou em órbita com sucesso em sua primeira tentativa.
+
+            "A transmissão da primeira imagem de Marte da Hope Probe é um momento decisivo em nossa história e marca a adesão dos Emirados Árabes Unidos às nações avançadas envolvidas na exploração espacial", disse o príncipe herdeiro de Abu Dhabi, Sheikh Mohamed bin Zayed Al Nahyan ao lado da imagem divulgada no Twitter neste domingo.
+        </p>
+
+        <p>
+            ua primeira imagem do planeta  Mission, conhecida como Hope Probe, chegou ao planeta vermelho na terça-feira (9) e entrou em órbita com sucesso em sua primeira tentativa.
+
+        </p>
 
     </aside>
 
