Criar um menu vertical

--- a/CSS/Unidade10-ListaMania.html
+++ b/CSS/Unidade10-ListaMania.html
@@ -8,26 +8,16 @@
 <body>
 <main>
     <header>
-        <nav></nav>
+        <nav>
+            <ul>
+                <li><a href="#"> Brasil</a></li>
+                <li><a href="#">Portugal</a></li>
+                <li><a href="#">Angola</a></li>
+                <li><a href="#">Mocambique</a></li>
+                <li><a href="#">Cabo verde</a></li>
+            </ul>
+        </nav>
     </header>
-
-    <ul>
-        <li>Brasil</li>
-        <li>Portugal</li>
-        <li>Angola</li>
-        <li>Mocambique</li>
-        <li>Cabo verde</li>
-    </ul>
-
-    <ol>
-        <li>Brasil</li>
-        <li>Portugal</li>
-        <li>Angola</li>
-        <li>Mocambique</li>
-        <li>Cabo verde</li>
-    </ol>
-
-
 
     <section></section>
     <article></article>
