--- a/CSS/Unidade10-ListaMania.html
+++ b/CSS/Unidade10-ListaMania.html
@@ -10,11 +10,40 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#"> Brasil</a></li>
-                <li><a href="#">Portugal</a></li>
-                <li><a href="#">Angola</a></li>
-                <li><a href="#">Mocambique</a></li>
-                <li><a href="#">Cabo verde</a></li>
+                <li><a href="#"> Brasil</a>
+                    <ul>
+                        <li><a href="#">Sao paulo</a></li>
+                        <li><a href="#">Recife</a></li>
+                        <li><a href="#">Rio de Janeiro</a></li>
+                    </ul>
+                </li>
+                <li><a href="#">Portugal</a>
+                    <ul>
+                        <li><a href="#">lisboa</a></li>
+                        <li><a href="#">Porto</a></li>
+                        <li><a href="#">Braga</a></li>
+                    </ul>
+                </li>
+                <li><a href="#">Angola</a>
+                    <ul>
+                        <li><a href="#">Luanda</a></li>
+                        <li><a href="#">Benguela</a></li>
+                    </ul>
+                </li>
+                <li><a href="#">Mocambique</a>
+                    <ul>
+                        <li><a href="#">Mmuto</a></li>
+                        <li><a href="#">Matola</a></li>
+                        <li><a href="#">Beira</a></li>
+                        <li><a href="#">Nampula</a></li>
+                    </ul>
+                </li>
+                <li><a href="#">Cabo verde</a>
+                    <ul>
+                        <li><a href="#">Praia</a></li>
+                        <li><a href="#">Mindelo</a></li>
+                    </ul>
+                </li>
             </ul>
         </nav>
     </header>
