--- a/jquery/Unidade04-Alémdobásico.html
+++ b/jquery/Unidade04-Alémdobásico.html
@@ -7,14 +7,10 @@
     <script src="jqueryScript/jquery-3.5.1.min.js"></script>
     <script>
         $(function () {
-            $("<li><img src=\'../HTML/imagens/estruturahtml5.png\' alt=''></li>")
-                .insertAfter("li:last-child")
+            $("h1").html("Formacao Desenvolvimento WEB Completo"); // adicionando valor dentro de um elemento ja existente
+            $("ul#listaCursos").append("<li>Curso Bootstrap Fundamental</li>"); // criando e adicionado um novo elemento - (append - adicona no final)
+            $("ul#listaCursos").prepend("<li>Curso Bootstrap Fundamental</li>");// criando e adicionado um novo elemento - (prepend - adicona no comeco)
 
-            $("<li><img src=\'../HTML/imagens/terremoto-causou-estragos-e-deixou-feridos-e-desabrigados.webp' alt=''></li>")
-                .insertBefore("li:first-child")
-
-            $("<li><img src=\'../HTML/imagens/cnn.svg' alt=''></li>")
-                .insertAfter("li:nth(0)")
         })
     </script>
 </head>
@@ -24,11 +20,13 @@
         <nav>
         </nav>
     </header>
+    <h1></h1>
+    <ul id="listaCursos">
+        <li>Curso HTML5 Essencial</li>
+        <li>Curso CSS3 Essencial</li>
+        <li>Curso Javascript Essencial</li>
+        <li>Curso jQuery Fundamental</li>
 
-    <ul>
-        <li><img src="../HTML/imagens/estruturahtml5.png" alt=""></li>
-        <li><img src="../HTML/imagens/terremoto-causou-estragos-e-deixou-feridos-e-desabrigados.webp" alt="" ></li>
-        <li><img src="../HTML/imagens/inundacao-provocada-pelo-deslizamento-de-uma-geleira-no-himalaia-no-norte-da-in.webp" alt=""></li>
     </ul>
 
     <section></section>
