--- a/jquery/Unidade05-ScrollingConteúdo.html
+++ b/jquery/Unidade05-ScrollingConteúdo.html
@@ -6,12 +6,38 @@
     <link href="estilos/estilo002.css" rel="stylesheet">
     <script src="jqueryScript/jquery-3.5.1.min.js"></script>
     <script>
+
         $(function () {
+
+            function redimencionarEmTempoReal() {
+
+                let alturaJanela = $(window).height()
+                let larguraJanela = $(window).width()
+                $("#primeira").css("height", alturaJanela).css("width", larguraJanela)
+                $("#segunda").css("height", alturaJanela).css("width", larguraJanela)
+                $("#terceira").css("height", alturaJanela).css("width", larguraJanela)
+            }
+
+            $(window).resize(function () {
+                redimencionarEmTempoReal()
+            })
+            redimencionarEmTempoReal()
+
+
             $("nav li:nth-child(2)").click(function () { // AO CLICAR CHAMA A FUNCAO
-               $("html,body").animate({scrollTop:80}, 1000); //SCROLL E A BARRA DE ROLAGEM, 80 e a quantidade de pixels
-               //que ira se movimentar e 1000 e tempo
+               $("html,body").animate({scrollTop:$("#segunda").offset().top}, 1000);
             });
+
+            $("nav li:nth-child(1)").click(function () { // AO CLICAR CHAMA A FUNCAO
+                $("html,body").animate({scrollTop:$("#primeira").offset().top}, 1000);
+            });
+
+            $("nav li:nth-child(3)").click(function () { // AO CLICAR CHAMA A FUNCAO
+                $("html,body").animate({scrollTop:$("#terceira").offset().top}, 1000);
+            });
+
         });
+
     </script>
 </head>
 <body>
@@ -21,12 +47,15 @@
             <ul>
                 <li id="tela1"></li>
                 <li id="tela2"></li>
+                <li id="tela3"></li>
+
             </ul>
         </nav>
     </header>
 
     <div id="primeira"></div>
     <div id="segunda"></div>
+    <div id="terceira"></div>
 
     <section></section>
     <article></article>
