Mostrar e esconder elementos com clique / Mostrar e esconder elementos ao rolar o mouse por cima.

--- a/jquery/Unidade06-Eventos.html
+++ b/jquery/Unidade06-Eventos.html
@@ -16,9 +16,12 @@
         </nav>
     </header>
 
-    <input type="button" id="cursoHtml" value="Curso HTML5">
-    <input type="button" id="cursoCss" value="Curso CSS3">
+    <input type="button" id="mostrar" value="mostrar">
+    <input type="button" id="esconder" value="esconder">
 
+    <div id="janela">
+
+    </div>
 
     <section></section>
     <article></article>
