Enviar parâmetros para um função com evento.

--- a/jquery/Unidade06-Eventos.html
+++ b/jquery/Unidade06-Eventos.html
@@ -16,8 +16,9 @@
         </nav>
     </header>
 
-    <input type="button" id="mostrar" value="mostrar">
-    <input type="button" id="esconder" value="esconder">
+    <input type="button" id="azul" value="azul">
+    <input type="button" id="vermelho" value="vermelho">
+    <input type="button" id="verde" value="verde">
 
     <div id="janela">
 
