--- a/jquery/Unidade07-AnimaçõeseEfeitos.html
+++ b/jquery/Unidade07-AnimaçõeseEfeitos.html
@@ -6,6 +6,7 @@
     <link href="estilos/estilo004.css" rel="stylesheet">
     <script src="jqueryScript/jquery-3.5.1.min.js"></script>
     <script src="myJqueryScripts/my_Jquery07.js"></script>
+
 </head>
 <body>
 <main>
@@ -14,12 +15,19 @@
     </header>
 
     <div id="janelaPrinc">
-    <input type="button" id="mostrar" name="mostrar" value="Mostrar">
-    <input type="button" id="esconder" name="esconder" value="Esconder">
-    <input type="button" id="reverso" name="reverso" value="Reverso">
+    <input type="button" id="animar" name="animar" value="Animar">
 
     <div id="janela">
     </div>
+
+        <div id="janela2">
+        </div>
+
+        <div id="janela3">
+        </div>
+
+        <div id="janela4">
+        </div>
 
     </div>
 
