Projeto - Criar um Image Rotator - aula 1

--- a/jquery/Unidade07-AnimaçõeseEfeitos.html
+++ b/jquery/Unidade07-AnimaçõeseEfeitos.html
@@ -15,19 +15,10 @@
     </header>
 
     <div id="janelaPrinc">
-    <input type="button" id="animar" name="animar" value="Animar">
-
-    <div id="janela">
-    </div>
-
-        <div id="janela2">
-        </div>
-
-        <div id="janela3">
-        </div>
-
-        <div id="janela4">
-        </div>
+        <img src="../HTML/imagens/estruturahtml5.png">
+        <img src="../HTML/imagens/terremoto-causou-estragos-e-deixou-feridos-e-desabrigados.webp">
+        <img src="../HTML/imagens/inundacao-provocada-pelo-deslizamento-de-uma-geleira-no-himalaia-no-norte-da-in.webp">
+        <img src="../HTML/imagens/Pato-LAranja_bx2.jpg">
 
     </div>
 
