--- a/jquery/Unidade07-AnimaçõeseEfeitos.html
+++ b/jquery/Unidade07-AnimaçõeseEfeitos.html
@@ -18,8 +18,10 @@
         <img src="../HTML/imagens/estruturahtml5.png">
         <img src="../HTML/imagens/terremoto-causou-estragos-e-deixou-feridos-e-desabrigados.webp">
         <img src="../HTML/imagens/inundacao-provocada-pelo-deslizamento-de-uma-geleira-no-himalaia-no-norte-da-in.webp">
-        <img src="../HTML/imagens/Pato-LAranja_bx2.jpg">
-    </div>
+        <img src="../HTML/imagens/estruturahtml5.png">
+
+        </div>
+
 </div>
     <section></section>
     <article></article>
