Projeto - Criar um Image Rotator - aula 4

--- a/jquery/Unidade07-AnimaçõeseEfeitos.html
+++ b/jquery/Unidade07-AnimaçõeseEfeitos.html
@@ -14,11 +14,14 @@
         <nav></nav>
     </header>
 <div id="janelaprincPrinc">
+
         <div id="janelaPrinc">
-        <img src="../HTML/imagens/estruturahtml5.png">
-        <img src="../HTML/imagens/terremoto-causou-estragos-e-deixou-feridos-e-desabrigados.webp">
-        <img src="../HTML/imagens/inundacao-provocada-pelo-deslizamento-de-uma-geleira-no-himalaia-no-norte-da-in.webp">
-        <img src="../HTML/imagens/estruturahtml5.png">
+            <img src="../HTML/imagens/Pato-LAranja_bx2.jpg">
+            <img src="../HTML/imagens/terremoto-causou-estragos-e-deixou-feridos-e-desabrigados.webp">
+            <img src="../HTML/imagens/inundacao-provocada-pelo-deslizamento-de-uma-geleira-no-himalaia-no-norte-da-in.webp">
+            <img src="../HTML/imagens/terremoto-causou-estragos-e-deixou-feridos-e-desabrigados.webp">
+            <img src="../HTML/imagens/inundacao-provocada-pelo-deslizamento-de-uma-geleira-no-himalaia-no-norte-da-in.webp">
+
 
         </div>
 
