--- a/Bootstrap/CursoV-Unidade03Grid.html
+++ b/Bootstrap/CursoV-Unidade03Grid.html
@@ -4,6 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="estilos/estilo01.css">
+    <link href="myJqueryScripts/Jquery01.js">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
@@ -12,18 +14,39 @@
 </head>
 
 <body>
+
 <!--Digite abaixo seu codigo-->
-<div class="container">
-    <h1>Titulo da minha pagina</h1>
-    <p>Note: The animation-duration property defines how long time an animation should take to complete. If the animation-duration property is not specified, no animation will occur, because the default value is 0s (0 seconds).
-       when the animation is 100% complete:</p>
+
+<div class="jumbotron text-center">
+    <h1>My First Bootstrap Page</h1>
+    <p>Resize this responsive page to see the effect!</p>
 </div>
 
 <div class="container-fluid">
-    <h1>Titulo da minha pagina</h1>
-    <p>Note: The animation-duration property defines how long time an animation should take to complete. If the animation-duration property is not specified, no animation will occur, because the default value is 0s (0 seconds).
+
+    <div class="row"> <!--row para ficar uma ao lado do outro, para naoquebrar a grid-->
+
+    <div class="col-sm-4"> <!--o grid e dividido em 12 colunas voce precisa dividir essa conta com as outras colunas-->
+        <h1>Titulo da minha pagina</h1>
+        <p>Note: The animation-duration property defines how long time an animation should take to complete. If the animation-duration property is not specified, no animation will occur, because the default value is 0s (0 seconds).
         when the animation is 100% complete:</p>
+    </div>
+
+    <div class="col-sm-4">
+        <h1>Titulo da minha pagina</h1>
+        <p>Note: The animation-duration property defines how long time an animation should take to complete. If the animation-duration property is not specified, no animation will occur, because the default value is 0s (0 seconds).
+            when the animation is 100% complete:</p>
+    </div>
+
+        <div class="col-sm-4">
+            <h1>Titulo da minha pagina</h1>
+            <p>Note: The animation-duration property defines how long time an animation should take to complete. If the animation-duration property is not specified, no animation will occur, because the default value is 0s (0 seconds).
+                when the animation is 100% complete:</p>
+        </div>
 </div>
+
+</div>
+
 <!--Fim do seu codigo-->
 
 </body>
